--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
    </header>
    <!-- Header and Nav Section Includes Name End -->
    <div class="card">
-    <video width="320" height="240" controls>
+    <video width="420" height="440" controls>
         <!-- <video width="320" height="240" muted autoplay> -->
-        <source src="Darleneopenvideo.mp4" type="video/mp4" autoplay loop>
+        <source src="Darlenefinalvidoe.mp4" type="video/mp4" autoplay loop>
       Your browser does not support the video tag.
       </video>
     </div>
