--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <!-- important to add so media queries work properly -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Mr+Bedfort&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&family=Tangerine&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css" />
 
@@ -46,7 +49,7 @@
         <div class="col-md-4">
             <video width="420" height="440" controls>
                 <!-- <video width="320" height="240" muted autoplay> -->
-                <source src="Darlenefinalvidoe.mp4" type="video/mp4" autoplay loop />
+                <source src="darlenevideo2.mp4" type="video/mp4" autoplay loop />
                 Your browser does not support the video tag.
             </video>
         </div>
