new pages and video

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <a class="nav-link" href="#scripture">Music Messages</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#messy">Ms Messy</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#about">About Darlene</a>
           </li>
           <li class="nav-item">
@@ -67,7 +70,7 @@
       <div class="col-md-4">
         <video width="420" height="440" controls>
           <!-- <video width="320" height="240" muted autoplay> -->
-          <source src="darlenevideo2.mp4" type="video/mp4" autoplay loop />
+          <source src="Darlenevideo.mp4" type="video/mp4" autoplay loop />
           Your browser does not support the video tag.
         </video>
       </div>
@@ -364,8 +367,9 @@
     <!-- Scripture Section Ends -->
     <!-- Ms Messy Section Starts -->
     <div class="container">
-      <div class="col-md-4" id="about">
+      <div class="col-md-4" id="messy">
         <h2>MEET MS. MESSY</h2>
+        <img src="AboutMsMessypicture.jpg" alt="Messy Girl" style="width:200px;height:100px;">
         <p>
           A young mother is sitting in church, an infant in her arms. The baby
           coughs just once. But three adult sisters sitting nearby immediately
@@ -374,27 +378,65 @@
           should have come to church. The three sisters reseat themselves a few
           rows up. As the pastor starts preaching, one sister falls asleep, one
           sister starts texting, and the third pulls up a game up on her tablet.
+        </p>
+          <p>
           Best reason in the world to go to church is to get a good feeling from
           the Word of God. Making people feel bad is just an added bonus. &#129322; No,
-          I’m just messing with you! <br /><br />
+          I’m just messing with you!
         </p>
+        <p id="jesus">
+            So glad, Jesus addresses our mess!
+          </p>
       </div>
     </div>
     <!-- Ms Messy Section Ends -->
+    <!-- It Connects You Section -->
+    <div class="container">
+        <div class="col-md-4" id="messy">
+          <h2>IT CONNECTS YOU!</h2>
+          <p>
+            To the Throne of Mercy
+            </p>
+            <p>
+            Lord, my desire is to follow you. What has developed in me, does not always represent you. You showed no concern when your reputation was questioned for eating with whom some consider degenerates. I want the same mindset. Lord, I need you to create in me a clean heart. Lower my nose if at any time it goes upward. Correct my eyes if they begin to appear side-eyed. Give my body language an overhaul if it expresses disapproval. When you fix these things. My attitude will be what describes You. Pure, lovely, and honorable. In Jesus Name…Amen
+          </p>
+           <p id="hear">
+        Next time you hear “Attitude” …let me know what YOU hear!   
+          </p>
+          <p id="jesus">
+          Contact Information: TAMITM.2021@gmail.com
+        </p>
+        </div>
+      </div>
     <!-- About Darlene Section Starts -->
     <div class="container">
-      <div class="col-md-4" id="about">
+      <div class="col-md-4" id="messy">
         <h2>ABOUT DARLENE</h2>
+        <img src="AboutDarlenePicture.jpg" alt="Women" style="width:300px;height:200px;">
         <p>
-          Darlene was born and raised in New England. She’s a homebody who loves
-          her family, good friends, music, New England, and anything to do with
-          Christmas. She is president of Tiny Hearts, a nonprofit organization
-          that teaches young children God’s Word via the internet. Darlene also
-          teaches two self-help classes for women and is a life coach. Her side
-          passion is creating, whether centerpieces and bouquets for weddings,
-          DJing, or decorating her home. She has studied the Bible her whole
-          life and finds it absolutely fascinating.
+    <div class="container">  
+        <p class="col-md-12">
+            Darlene, the creator of “Brospel” a twist on
+            blues & rhythm that sends a Gospel message,
+            was born and raised in Connecticut. She’s a
+            homebody who loves her family, good
+            friends, music, New England’s seasons, and
+            anything to do with Christmas. She is
+            president of Tiny Hearts, a nonprofit
+            organization that teaches young children
+            God’s Word via the internet. Darlene also
+            teaches two self-help classes for women and
+            is a life coach. Her side passion is creating,
+            floral arrangements, DJing, or decorating her
+            home. She’s studied the Bible her whole life
+            and still finds it absolutely fascinating. A true
+            lover of music. Darlene believes, “Just like
+            the Word of God, there’s such a natural
+            connecting beautiful message you find in
+            music!” Especially where you least expect it!
+            So, Open Your Ears and…Listen Here.
         </p>
+      </div>
       </div>
     </div>
     <!-- About Darlene Section Ends -->
@@ -403,7 +445,7 @@
     <div class="col-md-4" id="reachout">
       <h2>REACHOUT</h2>
       <p>
-        Darlene would be happy to connect and obtain feedback via her email at 
+        Darlene would be happy to connect and obtain feedback via her email at TAMITM.2021@gmail.com
       </p>
     </div>
   </div>
