title font changes

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <!-- Ms Messy Section Starts -->
     <div class="container">
       <div class="col-md-4" id="messy">
-        <h2>MEET MS. MESSY</h2>
+        <h2 id="mfont">MEET MS. MESSY</h2>
         <img src="AboutMsMessypicture.jpg" alt="Messy Girl" style="width:200px;height:100px;">
         <p>
           A young mother is sitting in church, an infant in her arms. The baby
@@ -393,7 +393,7 @@
     <!-- It Connects You Section -->
     <div class="container">
         <div class="col-md-4" id="messy">
-          <h2>IT CONNECTS YOU!</h2>
+          <h2 id="mfont">IT CONNECTS YOU!</h2>
           <p>
             To the Throne of Mercy
             </p>
@@ -403,15 +403,12 @@
            <p id="hear">
         Next time you hear “Attitude” …let me know what YOU hear!   
           </p>
-          <p id="jesus">
-          Contact Information: TAMITM.2021@gmail.com
-        </p>
         </div>
       </div>
     <!-- About Darlene Section Starts -->
     <div class="container">
-      <div class="col-md-4" id="messy">
-        <h2>ABOUT DARLENE</h2>
+      <div class="col-md-4" id="about">
+        <h2 id="mfont">ABOUT DARLENE</h2>
         <img src="AboutDarlenePicture.jpg" alt="Women" style="width:300px;height:200px;">
         <p>
     <div class="container">  
@@ -443,7 +440,7 @@
 <!-- Reachout Section Starts -->
 <div class="container">
     <div class="col-md-4" id="reachout">
-      <h2>REACHOUT</h2>
+      <h2 id="mfont">REACHOUT</h2>
       <p>
         Darlene would be happy to connect and obtain feedback via her email at TAMITM.2021@gmail.com
       </p>
