--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <p>
           Imagine you're enjoying a nice dinner with family and close friends.
           Some of those friends are very important people. As on prior
-          occasions, everyone is having a good time. Then suddenly people you’ve
+          occasions, everyone is having a good time. Then suddenly, people you’ve
           never seen before walk in. Abruptly, the most admired person at your
           table gets up, disassociating himself with you and your companions to
           join these newcomers at another table. You find that odd, but then
@@ -163,7 +163,7 @@
                 >I</span
               >
               [the apostle Paul] told him face to face that he was wrong. He
-              used to eat with Gentile followers of the Lord, until James sent
+              used to eat with Gentile followers of the Lord, until s sent
               some Jewish followers. Peter was afraid of the Jews and soon
               stopped eating with Gentiles. He and the other Jews hid their true
               feelings so well that even
@@ -221,7 +221,7 @@
           God,” he most definitely was not putting on “tender mercies” or
           “kindness.” Peter had enjoyed eating with these people many times
           before. So what was the problem now?<br /><br />
-          Surprisingly , the above passage from Galatians makes clear that Peter
+          Surprisingly, the above passage from Galatians makes clear that Peter
           acted as he did because he was “afraid of the Jews.” Definitely not
           the Peter we know who jumped from the boat to walk on water, blurted
           out both truth and denial of Jesus, was first to race to the tomb when
@@ -234,7 +234,7 @@
           >
           may have been like some of ours—you know, the ones we try to impress.
           The ones we feel have influence or power. All Peter knew was that he
-          didn’t want James’s friends to see him associating with Gentile
+          didn’t want ’ friends to see him associating with Gentile
           believers whom these influential Jewish church leaders considered
           unworthy of their company.<br /><br />
           Before we address why Paul was so heated that he felt compelled to
@@ -266,7 +266,13 @@
             >converts</span
           >, they too began acting hypocritically. Not good!<br /><br />
           In his early days as leader of the Jerusalem church, Peter had
-          originally struggled with the concept that pagan Gentiles could become
+          originally struggled with the concept that 
+          <span
+          style="color: red"
+          title="an unconverted member of a people or nation who does not practice Christianity, Judaism, or Islam "
+          >pagan</span
+        >
+           Gentiles could become
           Christians as well as God`s chosen people, the Jews. But Peter had
           received a personal vision from God, making clear that God accepts
           all, both Jews and Gentiles. Once Peter changed his perspective, God
@@ -305,7 +311,7 @@
           denied knowing Jesus. Though a disciple and close friend of Jesus,
           he’d been afraid of how others would perceive him if he admitted he
           knew Jesus. In the same way, Peter reverted back to his original
-          attitude toward non-Jews out of fear of James’s Jewish friends. How
+          attitude toward non-Jews out of fear of James’ Jewish friends. How
           could this be, considering such behavior toward the Antioch Gentile
           Christians occurred <i>after</i> Peter was filled with the
           <span
@@ -333,8 +339,8 @@
         </p>
         <div class="col-md-10" id="focus">
           <p>
-            . . . that you are working together and that you are struggling side
-            by side to get others to believe the good news. (Philippians 1:27b)
+            . . . that you are working together and that you are struggling <u>side
+            by side</u> to get others to believe the good news. (Philippians 1:27b)
           </p>
         </div>
         <br />
@@ -414,11 +420,10 @@
     <div class="container">  
         <p class="col-md-12">
             Darlene, the creator of “Brospel” a twist on
-            blues & rhythm that sends a Gospel message,
+            blues & rhythm (R&B) that sends a Gospel message,
             was born and raised in Connecticut. She’s a
-            homebody who loves her family, good
-            friends, music, New England’s seasons, and
-            anything to do with Christmas. She is
+            homebody who loves her family, music, New England’s seasons, and
+            anything and everything to do with Christmas. She is
             president of Tiny Hearts, a nonprofit
             organization that teaches young children
             God’s Word via the internet. Darlene also
